# usability_project

./: analyze_data.py  app.py  app2.py  app_alt.py  module_info.txt  prompt_log.json  prompt_log_app.py  pyproject.toml  requirements.txt
.agents/LOGBUCH_SKILL/: SKILL.md
components/: ui.py
core/: analytics.py  data_service.py  schema.py
data/: measurement_summary.csv  measurements.csv  sites_all.csv  sites_leaf.csv  sites_wq_corrosion_groups.csv  wq_summary.csv
ignore/: prompts.txt
prompt-logbook/assets/: template_entry.json
prompt-logbook/scripts/: add_entry.py  export_md.py  init_log.py  query_log.py
views/: anomalies.py  data_explorer.py  demographics.py  operations.py  overview.py
