[project]
name = "usability-project"
version = "0.1.0"
description = ""
authors = [
    {name = "zmansour10",email = "zaher99mansour@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.57.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
